--- a/ghostty/config
+++ b/ghostty/config
@@ -1,6 +1,6 @@
 # This is the configuration file for Ghostty.
 
-custom-shader = shaders/cursor_smear.glsl
+# custom-shader = shaders/cursor_smear.glsl
 
 # This template file has been automatically created at the following
 # path since Ghostty couldn't find any existing config files on your system:
