fix: now shader are in 120fps frame-rate

--- a/ghostty/config
+++ b/ghostty/config
@@ -1,6 +1,7 @@
 # This is the configuration file for Ghostty.
 
-# custom-shader = shaders/cursor_smear.glsl
+custom-shader = shaders/cursor_smear.glsl
+theme = Black Metal 
 
 # This template file has been automatically created at the following
 # path since Ghostty couldn't find any existing config files on your system:
